veecle-os-runtime-macros/tests/ui/storable/unimplemented_debug.stderr
error[E0277]: `Sensor` doesn't implement `Debug`
 --> tests/ui/storable/unimplemented_debug.rs:3:19
  |
3 | #[derive(Default, Storable)]
  |                   ^^^^^^^^ the trait `Debug` is not implemented for `Sensor`
  |
  = note: add `#[derive(Debug)]` to `Sensor` or manually `impl Debug for Sensor`
note: required by a bound in `veecle_os_runtime::Storable::DataType`
 --> $WORKSPACE/veecle-os-runtime/src/datastore/storable.rs
  |
  |     type DataType: Debug;
  |                    ^^^^^ required by this bound in `Storable::DataType`
  = note: this error originates in the derive macro `Storable` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Sensor` with `#[derive(Debug)]`
  |
4 + #[derive(Debug)]
5 | pub struct Sensor;
  |
